--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,27 @@ __pycache__/
 # C extensions
 *.so
 
+# data/
+# */data/
+# **/data/
+BraTS2021/
+*/BraTS2021/
+**/BraTS2021/
+
+# Large files
+*.zip
+*.tar
+*.tar.gz
+*.nii.gz
+*.nii
+
+checkpoints/
+*.ckpt
+*.pth
+*.pt
+*.h5
+*.pkl
+
 # Distribution / packaging
 .Python
 build/
